tests/baselines/reference/parserES5ComputedPropertyName11.errors.txt
tests/cases/conformance/parser/ecmascript5/ComputedPropertyNames/parserES5ComputedPropertyName11.ts(2,4): error TS1165: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/parser/ecmascript5/ComputedPropertyNames/parserES5ComputedPropertyName11.ts(2,4): error TS2391: Function implementation is missing or not immediately following the declaration.


==== tests/cases/conformance/parser/ecmascript5/ComputedPropertyNames/parserES5ComputedPropertyName11.ts (2 errors) ====
    class C {
       [e]();
       ~~~
!!! error TS1165: Computed property names are only available when targeting ECMAScript 6 and higher.
       ~~~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.
    }